force-app/main/default/objects/Log__c/fields/Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_ID__c</fullName>
    <description>Id of AsyncApexJob</description>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>