force-app/main/default/objects/Log__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>Process finish date</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>