force-app/main/default/objects/Log__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <description>Type of Async Job for example: BatchApex, Future...</description>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>SharingRecalculation</fullName>
            </value>
            <value>
                <fullName>ScheduledApex</fullName>
            </value>
            <value>
                <fullName>BatchApex</fullName>
            </value>
            <value>
                <fullName>BatchApexWorker</fullName>
            </value>
            <value>
                <fullName>TestRequest</fullName>
            </value>
            <value>
                <fullName>TestWorker</fullName>
            </value>
            <value>
                <fullName>ApexToken</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>