force-app/main/default/objects/Log__c/fields/NumberOfWarnings__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWarnings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of error messages</description>
    <label>Number of Warnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>