force-app/main/default/objects/Log__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>