force-app/main/default/objects/Log__c/fields/StatusFlag__c.field-meta.xml
<CustomField>
    <fullName>StatusFlag__c</fullName>
    <formula>IF(NumberOfErrors__c  = 0 &amp;&amp; NumberOfWarnings__c = 0, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Successful&apos;),
	IF(NumberOfErrors__c  &gt; 0 &amp;&amp; NumberOfErrors__c =  TotalJobItems__c , IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Failed&apos;),
     IF((NumberOfErrors__c  &gt; 0 &amp;&amp; NumberOfErrors__c &lt;  TotalJobItems__c) || NumberOfWarnings__c &gt; 0 , IMAGE(&apos;/img/msg_icons/warning16.png&apos;, &apos;Warning&apos;), null)
	)
)</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>