force-app/main/default/objects/Log__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Process start date</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>