force-app/main/default/objects/Log__c/fields/TraceLog__c.field-meta.xml
<CustomField>
    <fullName>TraceLog__c</fullName>
    <description>Process trace log</description>
    <label>Trace Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>